fix(resume): optimize tabs layout, refine mobile text alignment, and implement custom scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,3 +121,7 @@
   -webkit-text-stroke: 1px var(--color-accent);
   color: transparent;
 }
+
+@utility container {
+  @apply w-full mx-auto px-4 md:px-8 xl:px-0 max-w-300;
+}
